--- a/style.css
+++ b/style.css
@@ -1,3 +1,70 @@
-body {
-    background: yellow;
+* {
+    box-sizing: border-box;
+}
+
+header {
+    background: black;
+    color: white;
+    padding: 15px;
+}
+
+body, ul {
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    max-width: 1000px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header ul li a {
+color: white;
+text-decoration: none;
+padding: 10px 25px 10px 25px;
+display: block;
+text-transform: uppercase;
+font-weight: bold;
+font-family: Arial, Helvetica, sans-serif;
+}
+#logo {
+    display: block;
+    max-width: 70px;
+}
+
+header ul li a:hover{
+background: #2b2929;
+}
+
+header ul li {
+    list-style: none;
+}
+
+header ul {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+
+
+
+
+
+
+@media(max-width: 725px) {
+    header .container {
+        flex-wrap: wrap; 
+        justify-content: center;
+    }
+
+    header ul {
+        width: 100%;
+        flex-direction: column;
+        text-align: center;
+        margin-top: 25px;
+    }
 }
