created footer styles

--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ header ul {
     margin: 15px 0;
     box-shadow: 0 0 0px 4px #1b1a1a45;
     padding: 15px;
+    min-height: 810px;
 }
 
 #sidebar ul li a {
@@ -99,6 +100,7 @@ border-color: #a3c639;
     margin-bottom: 15px;
     padding: 15px;
 }
+
 .product:hover {
     -moz-transform: scale(1.02);
 -webkit-transform: scale(1.02);
@@ -136,9 +138,81 @@ box-shadow: 0 0 5px 1px#2b2929;
     cursor: pointer;
 }
 
+footer {
+    width: 100%;
+    background: #5e5e5e;
+    color: white; 
+    padding: 15px 15px 15px 15px;
+}
+footer a {
+    color: white;
+}
+
+footer .container > div {
+    max-width: 260px;
+    width: 100%;
+}
+
+footer h3 {
+    margin: 0 0 15px 0;
+}
+
+.f-links a{
+    display: block;
+    padding: 0 0 5px 0;
+}
+
+.f-links a:hover {
+    text-decoration: underline;
+}
+footer .container {
+    align-items: flex-start;
+}
+
+.form-subscribe, .social-links {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-subscribe input {
+    margin-bottom: 15px;
+    height: 30px;
+    padding: 5px; 
+}
+
+.form-subscribe button {
+    background: #a3c639;
+    border: none;
+    padding: 5px 15px;
+    cursor: pointer;
+}
+
+.social-links a {
+    padding: 0 0 15px 0;
+    display: block;
+    font-size: 20px;
+}
+
+.social-links {
+    padding-left: 100px;
+}
+
 @media(max-width: 960px) {
     .product {
         width: 32%;
+    }
+}
+
+@media(max-width: 830px) {
+    footer > div.container {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    footer > div.container > div {
+        text-align: center;
+        padding-left: 0;
+        margin-bottom: 15px;
     }
 }
 
@@ -147,7 +221,7 @@ box-shadow: 0 0 5px 1px#2b2929;
         flex-wrap: wrap; 
         justify-content: center;
     }
-
+    
     header ul {
         width: 100%;
         flex-direction: column;
@@ -165,6 +239,10 @@ box-shadow: 0 0 5px 1px#2b2929;
     #content {
         width: 65%;
     }
+}
+
+#sidebar, #content {
+    min-height: auto;
 }
 
 @media(max-width: 570px) {
